--- a/index.html
+++ b/index.html
@@ -4,66 +4,74 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Caring Hands of Tennessee</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
   :root {
     --primary: #0b2c5d; /* dark blue */
+    --secondary: #f8a61b; /* soft accent */
     --light: #ffffff;
     --accent: #1e3a8a;
     --radius: 12px;
   }
+
   * { box-sizing: border-box; margin:0; padding:0; }
-  body { font-family: Arial, sans-serif; background: var(--light); color: var(--primary); line-height:1.6; }
+  body { font-family: 'Poppins', sans-serif; background: var(--light); color: var(--primary); line-height:1.6; }
   a { color: var(--accent); text-decoration:none; }
   a:hover { text-decoration: underline; }
 
   /* Header / Navigation */
-  header { background: var(--primary); color: var(--light); padding: 20px; position: sticky; top:0; z-index:1000; }
-  header .wrap { display:flex; justify-content: space-between; align-items:center; flex-wrap: wrap; }
+  header { background: var(--primary); color: var(--light); padding: 15px 20px; position: sticky; top:0; z-index:1000; display:flex; justify-content:space-between; align-items:center; }
+  .logo img { height: 50px; margin-right: 10px; vertical-align: middle; }
   nav ul { list-style: none; display: flex; gap: 20px; flex-wrap: wrap; }
-  nav ul li a { color: var(--light); font-weight:600; }
-  nav ul li a:hover { color: var(--accent); }
+  nav ul li a { color: var(--light); font-weight:600; transition:0.3s; }
+  nav ul li a:hover { color: var(--secondary); }
 
   /* Hero */
-  .hero { background: var(--primary); color: var(--light); text-align:center; padding: 60px 20px; }
-  .hero h1 { font-size: 36px; margin-bottom: 12px; }
-  .hero p { font-size: 20px; }
+  .hero { background: var(--primary); color: var(--light); text-align:center; padding: 80px 20px; border-bottom: 5px solid var(--secondary); }
+  .hero h1 { font-size: 42px; margin-bottom: 12px; }
+  .hero p { font-size: 22px; }
 
   /* Sections */
-  .wrap { max-width: 1000px; margin:auto; padding:20px; }
-  section { margin-bottom:40px; }
-  h2 { font-size:28px; margin-bottom:16px; border-bottom:3px solid var(--primary); display:inline-block; padding-bottom:4px; }
+  .wrap { max-width: 1000px; margin:auto; padding:40px 20px; }
+  section { margin-bottom:60px; }
+  h2 { font-size:32px; margin-bottom:24px; border-left:6px solid var(--secondary); padding-left:10px; }
+
+  /* Cards for Programs / Tutoring / Contact */
+  .card { background: var(--light); padding: 25px; border-radius: var(--radius); box-shadow: 0 4px 10px rgba(0,0,0,0.1); margin-bottom:20px; transition: transform 0.2s; }
+  .card:hover { transform: translateY(-5px); }
 
   /* Accordion for Programs */
-  .accordion { background: var(--primary); color: var(--light); cursor: pointer; padding: 18px; width:100%; border:none; outline:none; text-align:left; font-size:18px; transition: 0.3s; border-radius: var(--radius); margin-bottom:8px;}
+  .accordion { background: var(--primary); color: var(--light); cursor: pointer; padding: 18px; width:100%; border:none; outline:none; text-align:left; font-size:20px; transition: 0.3s; border-radius: var(--radius); margin-bottom:8px;}
   .active, .accordion:hover { background: var(--accent); }
   .panel { padding: 0 18px; display:none; background-color: var(--light); color: var(--primary); overflow:hidden; border-radius: var(--radius); margin-bottom:10px; }
 
   /* Forms */
-  form input, form textarea { width:100%; padding:8px; margin:5px 0; border:1px solid var(--primary); border-radius: var(--radius); }
-  form button { background: var(--primary); color: var(--light); padding:10px 20px; border:none; border-radius: var(--radius); cursor:pointer; }
+  form input, form textarea { width:100%; padding:10px; margin:5px 0; border:1px solid var(--primary); border-radius: var(--radius); font-family: 'Poppins', sans-serif; }
+  form button { background: var(--secondary); color: var(--light); padding:12px 25px; border:none; border-radius: var(--radius); cursor:pointer; font-size:16px; transition:0.3s; }
   form button:hover { background: var(--accent); }
 
   /* Footer */
-  footer { background: var(--primary); color: var(--light); text-align:center; padding:20px; }
+  footer { background: var(--primary); color: var(--light); text-align:center; padding:25px; margin-top:40px; font-size:16px; }
 </style>
 </head>
 <body>
 
 <header>
-  <div class="wrap">
-    <div class="logo"><strong>Caring Hands of Tennessee</strong></div>
-    <nav>
-      <ul>
-        <li><a href="#mission">Mission</a></li>
-        <li><a href="#vision">Vision</a></li>
-        <li><a href="#story">Our Story</a></li>
-        <li><a href="#programs">Programs</a></li>
-        <li><a href="#tutoring">Tutoring</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#get-involved">Get Involved</a></li>
-      </ul>
-    </nav>
+  <div class="logo">
+    <img src="logo.png" alt="Caring Hands Logo">
+    <strong>Caring Hands of Tennessee</strong>
   </div>
+  <nav>
+    <ul>
+      <li><a href="#mission">Mission</a></li>
+      <li><a href="#vision">Vision</a></li>
+      <li><a href="#story">Our Story</a></li>
+      <li><a href="#programs">Programs</a></li>
+      <li><a href="#tutoring">Tutoring</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#get-involved">Get Involved</a></li>
+    </ul>
+  </nav>
 </header>
 
 <div class="hero">
@@ -73,17 +81,17 @@
 
 <div class="wrap">
 
-  <section id="mission">
+  <section id="mission" class="card">
     <h2>Mission</h2>
     <p>To expand access to healthcare, financial literacy, and education, empowering underserved communities to thrive.</p>
   </section>
 
-  <section id="vision">
+  <section id="vision" class="card">
     <h2>Vision</h2>
     <p>To create a future where underserved youth thrive with health, knowledge, and opportunity.</p>
   </section>
 
-  <section id="story">
+  <section id="story" class="card">
     <h2>Our Story</h2>
     <p>In our community, many youth lack access to basic resources, tutoring, and support. Inspired to uplift them, we launched programs in education, health, and financial literacy to ensure that no one is left behind.</p>
     <p>Caring Hands of Tennessee was created with a simple belief: everyone deserves unlimited access to education and healthcare. What began as a vision to serve local youth has grown into a mission to empower families, strengthen communities, and provide resources that create lasting change.</p>
@@ -91,25 +99,23 @@
 
   <section id="programs">
     <h2>Programs</h2>
-
     <button class="accordion">Education</button>
-    <div class="panel">
+    <div class="panel card">
       <p>We provide tutoring, mentorship, and resources to help students succeed academically and build confidence.</p>
     </div>
 
     <button class="accordion">Health & Wellness</button>
-    <div class="panel">
+    <div class="panel card">
       <p>We offer wellness workshops, guidance, and support services to ensure youth have access to health resources.</p>
     </div>
 
     <button class="accordion">Financial Literacy</button>
-    <div class="panel">
+    <div class="panel card">
       <p>Workshops and guidance help youth and families develop budgeting and money management skills.</p>
     </div>
-
   </section>
 
-  <section id="tutoring">
+  <section id="tutoring" class="card">
     <h2>Sign Up for Tutoring</h2>
     <p>We offer tutoring in:</p>
     <ul>
@@ -118,44 +124,27 @@
       <li>All Math courses up to Calculus</li>
       <li>ACT preparation</li>
     </ul>
-
     <form action="https://formspree.io/f/your-tutoring-form-id" method="POST">
-      <label for="name">Name:</label><br>
-      <input type="text" id="name" name="name" required><br>
-
-      <label for="email">Email:</label><br>
-      <input type="email" id="email" name="_replyto" required><br>
-
-      <label for="subjects">Subjects Interested In:</label><br>
-      <input type="text" id="subjects" name="subjects" placeholder="e.g., Algebra, ACT Reading"><br>
-
-      <label for="notes">Additional Notes:</label><br>
-      <textarea id="notes" name="notes" rows="4"></textarea><br>
-
+      <input type="text" name="name" placeholder="Name" required>
+      <input type="email" name="_replyto" placeholder="Email" required>
+      <input type="text" name="subjects" placeholder="Subjects Interested In">
+      <textarea name="notes" rows="4" placeholder="Additional Notes"></textarea>
       <button type="submit">Sign Up</button>
     </form>
   </section>
 
-  <section id="contact">
+  <section id="contact" class="card">
     <h2>Contact Us</h2>
     <form action="https://formspree.io/f/your-contact-form-id" method="POST">
-      <label for="name2">Name:</label><br>
-      <input type="text" id="name2" name="name" required><br>
-
-      <label for="email2">Email:</label><br>
-      <input type="email" id="email2" name="_replyto" required><br>
-
-      <label for="subject">Subject:</label><br>
-      <input type="text" id="subject" name="subject"><br>
-
-      <label for="message">Message:</label><br>
-      <textarea id="message" name="message" rows="5" required></textarea><br>
-
+      <input type="text" name="name" placeholder="Name" required>
+      <input type="email" name="_replyto" placeholder="Email" required>
+      <input type="text" name="subject" placeholder="Subject">
+      <textarea name="message" rows="5" placeholder="Message" required></textarea>
       <button type="submit">Send Message</button>
     </form>
   </section>
 
-  <section id="get-involved">
+  <section id="get-involved" class="card">
     <h2>Get Involved</h2>
     <ul>
       <li>Volunteer: Help with tutoring, mentorship, and workshops</li>
@@ -171,7 +160,6 @@
 </footer>
 
 <script>
-  // Accordion functionality
   const acc = document.getElementsByClassName("accordion");
   for (let i = 0; i < acc.length; i++) {
     acc[i].addEventListener("click", function() {
@@ -181,7 +169,5 @@
     });
   }
 </script>
-
 </body>
 </html>
-
