--- a/index.html
+++ b/index.html
@@ -1,220 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Caring Hands of Tennessee</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-<style>
-  :root {
-    --primary: #0b2c5d; /* dark blue */
-    --secondary: #f8a61b; /* soft accent */
-    --light: #ffffff;
-    --accent: #1e3a8a;
-    --radius: 12px;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Caring Hands of Tennessee</title>
+  <style>
+    /* Fonts */
+    @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
 
-  * { box-sizing: border-box; margin:0; padding:0; }
-  body { 
-    font-family: 'Poppins', sans-serif; 
-    background: linear-gradient(135deg, #ffffff, #e6f0ff);
-    color: var(--primary); 
-    line-height:1.6; 
-  }
-  a { color: var(--accent); text-decoration:none; }
-  a:hover { text-decoration: underline; }
+    body {
+      font-family: 'Nunito', sans-serif;
+      margin: 0;
+      background: linear-gradient(135deg, #0a1d37, #123c69);
+      color: #fff;
+      line-height: 1.6;
+    }
 
-  /* Header / Navigation */
-  header { 
-    background: var(--primary); 
-    color: var(--light); 
-    padding: 15px 20px; 
-    position: sticky; top:0; 
-    z-index:1000; 
-    display:flex; justify-content:space-between; 
-    align-items:center; 
-  }
-  .logo img { height: 50px; margin-right: 10px; vertical-align: middle; }
-  nav ul { list-style: none; display: flex; gap: 20px; flex-wrap: wrap; }
-  nav ul li a { color: var(--light); font-weight:600; transition:0.3s; }
-  nav ul li a:hover { color: var(--secondary); }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1.5rem 3rem;
+      background: rgba(0, 0, 0, 0.3);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
 
-  /* Hero */
-  .hero { 
-    background: linear-gradient(135deg, #0b2c5d, #1e3a8a); 
-    color: var(--light); 
-    text-align:center; 
-    padding: 80px 20px; 
-    border-bottom: 5px solid var(--secondary); 
-  }
-  .hero h1 { font-size: 42px; margin-bottom: 12px; }
-  .hero p { font-size: 22px; }
+    header img {
+      height: 60px;
+    }
 
-  /* Sections */
-  .wrap { max-width: 1000px; margin:auto; padding:40px 20px; }
-  section { margin-bottom:60px; }
-  h2 { font-size:32px; margin-bottom:24px; border-left:6px solid var(--secondary); padding-left:10px; }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 1rem;
+      font-weight: 600;
+      transition: color 0.3s;
+    }
 
-  /* Cards for Programs / Tutoring / Contact */
-  .card { 
-    background: linear-gradient(145deg, #ffffff, #f2f7ff); 
-    padding: 25px; 
-    border-radius: var(--radius); 
-    box-shadow: 0 6px 15px rgba(0,0,0,0.1); 
-    margin-bottom:20px; 
-    transition: transform 0.3s, box-shadow 0.3s; 
-  }
-  .card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.15); }
+    nav a:hover {
+      color: #f1c40f;
+    }
 
-  /* Accordion for Programs */
-  .accordion { 
-    background: var(--primary); 
-    color: var(--light); 
-    cursor: pointer; 
-    padding: 18px; 
-    width:100%; 
-    border:none; outline:none; 
-    text-align:left; font-size:20px; 
-    transition: 0.3s; border-radius: var(--radius); margin-bottom:8px;
-  }
-  .active, .accordion:hover { background: var(--accent); }
-  .panel { 
-    padding: 0 18px; display:none; 
-    background-color: var(--light); color: var(--primary); 
-    overflow:hidden; border-radius: var(--radius); margin-bottom:10px; 
-  }
+    .hero {
+      text-align: center;
+      padding: 5rem 2rem;
+      background: url('https://www.transparenttextures.com/patterns/cubes.png');
+      background-size: cover;
+    }
 
-  /* Forms */
-  form input, form textarea { 
-    width:100%; padding:10px; margin:5px 0; 
-    border:1px solid var(--primary); border-radius: var(--radius); 
-    font-family: 'Poppins', sans-serif; 
-  }
-  form button { 
-    background: var(--secondary); color: var(--light); 
-    padding:12px 25px; border:none; border-radius: var(--radius); 
-    cursor:pointer; font-size:16px; transition:0.3s; 
-  }
-  form button:hover { background: var(--accent); }
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
 
-  /* Footer */
-  footer { background: var(--primary); color: var(--light); text-align:center; padding:25px; margin-top:40px; font-size:16px; }
-</style>
+    .hero p {
+      font-size: 1.25rem;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+
+    section {
+      padding: 4rem 2rem;
+      max-width: 1100px;
+      margin: auto;
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      color: #f1c40f;
+    }
+
+    .card {
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 12px;
+      padding: 2rem;
+      margin: 1rem;
+      text-align: center;
+      transition: transform 0.3s;
+    }
+
+    .card:hover {
+      transform: translateY(-8px);
+    }
+
+    .card h3 {
+      margin-bottom: 1rem;
+      color: #f1c40f;
+    }
+
+    .card-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 1.5rem;
+    }
+
+    .contact-form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      max-width: 600px;
+      margin: auto;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      padding: 0.75rem;
+      border-radius: 6px;
+      border: none;
+      font-size: 1rem;
+    }
+
+    .contact-form button {
+      padding: 0.75rem;
+      background: #f1c40f;
+      border: none;
+      border-radius: 6px;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .contact-form button:hover {
+      background: #d4ac0d;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1.5rem;
+      background: rgba(0, 0, 0, 0.5);
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <img src="logo.png" alt="Caring Hands of Tennessee Logo">
+    <nav>
+      <a href="#story">Our Story</a>
+      <a href="#mission">Mission & Vision</a>
+      <a href="#tutoring">Tutoring</a>
+      <a href="#collab">Collaborate</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-<header>
-  <div class="logo">
-    <img src="logo.png" alt="Caring Hands Logo">
-    <strong>Caring Hands of Tennessee</strong>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="#mission">Mission</a></li>
-      <li><a href="#vision">Vision</a></li>
-      <li><a href="#story">Our Story</a></li>
-      <li><a href="#programs">Programs</a></li>
-      <li><a href="#tutoring">Tutoring</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#get-involved">Get Involved</a></li>
-    </ul>
-  </nav>
-</header>
-
-<div class="hero">
-  <h1>Empowering Our Community Through Education & Health</h1>
-  <p>Providing access, support, and opportunity to every underserved youth.</p>
-</div>
-
-<div class="wrap">
-
-  <section id="mission" class="card">
-    <h2>Mission</h2>
-    <p>To expand access to healthcare, financial literacy, and education, empowering underserved communities to thrive.</p>
+  <section class="hero">
+    <h1>Caring Hands of Tennessee</h1>
+    <p>Expanding access to healthcare, financial literacy, and education — empowering underserved communities to thrive.</p>
   </section>
 
-  <section id="vision" class="card">
-    <h2>Vision</h2>
-    <p>To create a future where underserved youth thrive with health, knowledge, and opportunity.</p>
-  </section>
-
-  <section id="story" class="card">
+  <section id="story">
     <h2>Our Story</h2>
-    <p>In our community, many youth lack access to basic resources, tutoring, and support. Inspired to uplift them, we launched programs in education, health, and financial literacy to ensure that no one is left behind.</p>
-    <p>Caring Hands of Tennessee was created with a simple belief: everyone deserves unlimited access to education and healthcare. What began as a vision to serve local youth has grown into a mission to empower families, strengthen communities, and provide resources that create lasting change.</p>
+    <p>In our community, many youth lack access to basic resources, tutoring, and support. Inspired to uplift them, we launched programs in education, healthcare, and financial literacy. Caring Hands of Tennessee was created to ensure everyone has the opportunity to thrive.</p>
   </section>
 
-  <section id="programs">
-    <h2>Programs</h2>
-    <button class="accordion">Education</button>
-    <div class="panel card">
-      <p>We provide tutoring, mentorship, and resources to help students succeed academically and build confidence.</p>
-    </div>
-
-    <button class="accordion">Health & Wellness</button>
-    <div class="panel card">
-      <p>We offer wellness workshops, guidance, and support services to ensure youth have access to health resources.</p>
-    </div>
-
-    <button class="accordion">Financial Literacy</button>
-    <div class="panel card">
-      <p>Workshops and guidance help youth and families develop budgeting and money management skills.</p>
+  <section id="mission">
+    <h2>Mission & Vision</h2>
+    <div class="card-container">
+      <div class="card">
+        <h3>Mission</h3>
+        <p>To expand access to healthcare, financial literacy, and education, empowering underserved communities to thrive.</p>
+      </div>
+      <div class="card">
+        <h3>Vision</h3>
+        <p>To create a future where underserved youth thrive with health, knowledge, and opportunity.</p>
+      </div>
     </div>
   </section>
 
-  <section id="tutoring" class="card">
-    <h2>Sign Up for Tutoring</h2>
-    <p>We offer tutoring in:</p>
-    <ul>
-      <li>All English courses</li>
-      <li>All Science courses</li>
-      <li>All Math courses up to Calculus</li>
-      <li>ACT preparation</li>
-    </ul>
-    <form action="https://formspree.io/f/your-tutoring-form-id" method="POST">
-      <input type="text" name="name" placeholder="Name" required>
-      <input type="email" name="_replyto" placeholder="Email" required>
-      <input type="text" name="subjects" placeholder="Subjects Interested In">
-      <textarea name="notes" rows="4" placeholder="Additional Notes"></textarea>
-      <button type="submit">Sign Up</button>
+  <section id="tutoring">
+    <h2>Tutoring Programs</h2>
+    <p style="text-align:center; max-width:800px; margin:auto;">We offer tutoring in all English courses, all sciences, all math up to Calculus, and ACT preparation. Our goal is to help students build confidence and succeed academically.</p>
+    <form action="https://formspree.io/f/myzngkve" method="POST" class="contact-form">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <input type="text" name="subject" placeholder="What subject do you need help with?" required>
+      <textarea name="message" rows="5" placeholder="Tell us about your tutoring needs" required></textarea>
+      <button type="submit">Sign Up for Tutoring</button>
     </form>
   </section>
 
-  <section id="contact" class="card">
+  <section id="collab">
+    <h2>Collaborate With Us</h2>
+    <p style="text-align:center; max-width:800px; margin:auto;">We welcome partnerships with schools, organizations, and individuals who share our mission. Fill out the form below to collaborate with us!</p>
+    <form action="https://formspree.io/f/mzzjpdwr" method="POST" class="contact-form">
+      <input type="text" name="name" placeholder="Your Name or Organization" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <input type="text" name="subject" placeholder="Collaboration Idea" required>
+      <textarea name="message" rows="5" placeholder="Tell us how you’d like to collaborate" required></textarea>
+      <button type="submit">Submit Collaboration</button>
+    </form>
+  </section>
+
+  <section id="contact">
     <h2>Contact Us</h2>
-    <form action="https://formspree.io/f/your-contact-form-id" method="POST">
-      <input type="text" name="name" placeholder="Name" required>
-      <input type="email" name="_replyto" placeholder="Email" required>
-      <input type="text" name="subject" placeholder="Subject">
-      <textarea name="message" rows="5" placeholder="Message" required></textarea>
+    <form action="https://formspree.io/f/xdkwnajn" method="POST" class="contact-form">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <input type="text" name="subject" placeholder="Subject" required>
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
       <button type="submit">Send Message</button>
     </form>
   </section>
 
-  <section id="get-involved" class="card">
-    <h2>Get Involved</h2>
-    <ul>
-      <li>Volunteer: Help with tutoring, mentorship, and workshops</li>
-      <li>Donate: One-time or monthly gifts to support programs</li>
-      <li>Partner: Work with us as a school, business, or community organization</li>
-    </ul>
-  </section>
-
-</div>
-
-<footer>
-  Caring Hands of Tennessee
-</footer>
-
-<script>
-  const acc = document.getElementsByClassName("accordion");
-  for (let i = 0; i < acc.length; i++) {
-    acc[i].addEventListener("click", function() {
-      this.classList.toggle("active");
-      const panel = this.nextElementSibling;
-      panel.style.display = panel.style.display === "block" ? "none" : "block";
-    });
-  }
-</script>
+  <footer>
+    <p>© 2025 Caring Hands of Tennessee. All rights reserved.</p>
+  </footer>
 </body>
 </html>
