--- a/index.html
+++ b/index.html
@@ -2,214 +2,274 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Caring Hands of Tennessee</title>
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    /* Fonts */
-    @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
-
-    body {
-      font-family: 'Nunito', sans-serif;
-      margin: 0;
-      background: linear-gradient(135deg, #0a1d37, #123c69);
-      color: #fff;
-      line-height: 1.6;
+    /* Variables */
+    :root {
+      --primary: #0b2c5d;  /* dark blue */
+      --accent: #f8a61b;   /* gold/yellow accent */
+      --light: #ffffff;
+      --gray-light: #f5f5f5;
+      --text-dark: #333333;
+      --radius: 10px;
     }
+
+    /* Reset & body */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Montserrat', sans-serif; color: var(--text-dark); background: var(--gray-light); }
+
+    a { text-decoration: none; color: var(--primary); }
+    a:hover { color: var(--accent); }
+
+    img { max-width: 100%; border-radius: var(--radius); }
 
     header {
+      background: var(--primary);
+      color: var(--light);
+      padding: 20px;
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      padding: 1.5rem 3rem;
-      background: rgba(0, 0, 0, 0.3);
+      justify-content: space-between;
       position: sticky;
       top: 0;
-      z-index: 1000;
+      z-index: 100;
     }
-
-    header img {
-      height: 60px;
+    header .logo {
+      display: flex;
+      align-items: center;
     }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 1rem;
+    header .logo img {
+      height: 50px;
+      margin-right: 12px;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+    }
+    nav ul li a {
       font-weight: 600;
-      transition: color 0.3s;
+      color: var(--light);
     }
-
-    nav a:hover {
-      color: #f1c40f;
+    nav ul li a:hover {
+      color: var(--accent);
     }
 
     .hero {
+      position: relative;
+      background: url('banner.jpg') center/cover no-repeat;
+      color: var(--light);
+      height: 60vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
-      padding: 5rem 2rem;
-      background: url('https://www.transparenttextures.com/patterns/cubes.png');
-      background-size: cover;
     }
-
+    .hero:before {
+      content: '';
+      position: absolute;
+      inset:0;
+      background: rgba(0,0,0,0.5);
+    }
+    .hero .hero-content {
+      position: relative;
+      z-index: 1;
+      max-width: 800px;
+      padding: 20px;
+    }
     .hero h1 {
       font-size: 3rem;
-      margin-bottom: 1rem;
+      margin-bottom: 20px;
+    }
+    .hero p {
+      font-size: 1.3rem;
     }
 
-    .hero p {
-      font-size: 1.25rem;
-      max-width: 700px;
-      margin: 0 auto;
+    .wrap {
+      max-width: 1000px;
+      margin: auto;
+      padding: 40px 20px;
     }
 
     section {
-      padding: 4rem 2rem;
-      max-width: 1100px;
-      margin: auto;
+      margin-bottom: 60px;
     }
 
-    h2 {
+    .section-title {
+      font-size: 2.2rem;
+      color: var(--primary);
+      margin-bottom: 30px;
       text-align: center;
-      font-size: 2rem;
-      margin-bottom: 2rem;
-      color: #f1c40f;
+    }
+
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
+      gap: 20px;
     }
 
     .card {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 12px;
-      padding: 2rem;
-      margin: 1rem;
-      text-align: center;
-      transition: transform 0.3s;
+      background: var(--light);
+      border-radius: var(--radius);
+      padding: 30px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
     }
-
     .card:hover {
-      transform: translateY(-8px);
+      transform: translateY(-5px);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.15);
     }
-
     .card h3 {
-      margin-bottom: 1rem;
-      color: #f1c40f;
+      margin-bottom: 15px;
+      color: var(--primary);
+    }
+    .card p {
+      color: var(--text-dark);
+      line-height: 1.5;
     }
 
-    .card-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1.5rem;
-    }
-
-    .contact-form {
+    .form-group {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 15px;
       max-width: 600px;
       margin: auto;
     }
-
-    .contact-form input,
-    .contact-form textarea {
-      padding: 0.75rem;
-      border-radius: 6px;
-      border: none;
+    .form-group input,
+    .form-group textarea {
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: var(--radius);
       font-size: 1rem;
     }
-
-    .contact-form button {
-      padding: 0.75rem;
-      background: #f1c40f;
+    .form-group button {
+      background: var(--accent);
+      color: var(--primary);
+      padding: 12px 25px;
       border: none;
-      border-radius: 6px;
-      font-size: 1rem;
-      font-weight: bold;
+      border-radius: var(--radius);
+      font-weight: 600;
       cursor: pointer;
       transition: background 0.3s;
     }
-
-    .contact-form button:hover {
-      background: #d4ac0d;
+    .form-group button:hover {
+      background: #d6a30f;
     }
 
     footer {
+      background: var(--primary);
+      color: var(--light);
       text-align: center;
-      padding: 1.5rem;
-      background: rgba(0, 0, 0, 0.5);
-      font-size: 0.9rem;
+      padding: 30px 20px;
     }
   </style>
 </head>
 <body>
+
   <header>
-    <img src="logo.png" alt="Caring Hands of Tennessee Logo">
+    <div class="logo">
+      <img src="logo.png" alt="Caring Hands Logo">
+      <strong style="font-size:1.5rem; color: var(--light);">Caring Hands of Tennessee</strong>
+    </div>
     <nav>
-      <a href="#story">Our Story</a>
-      <a href="#mission">Mission & Vision</a>
-      <a href="#tutoring">Tutoring</a>
-      <a href="#collab">Collaborate</a>
-      <a href="#contact">Contact</a>
+      <ul>
+        <li><a href="#story">Our Story</a></li>
+        <li><a href="#mission">Mission & Vision</a></li>
+        <li><a href="#programs">Programs</a></li>
+        <li><a href="#tutoring">Tutoring</a></li>
+        <li><a href="#collab">Collaborate</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
-  <section class="hero">
-    <h1>Caring Hands of Tennessee</h1>
-    <p>Expanding access to healthcare, financial literacy, and education — empowering underserved communities to thrive.</p>
-  </section>
-
-  <section id="story">
-    <h2>Our Story</h2>
-    <p>In our community, many youth lack access to basic resources, tutoring, and support. Inspired to uplift them, we launched programs in education, healthcare, and financial literacy. Caring Hands of Tennessee was created to ensure everyone has the opportunity to thrive.</p>
-  </section>
-
-  <section id="mission">
-    <h2>Mission & Vision</h2>
-    <div class="card-container">
-      <div class="card">
-        <h3>Mission</h3>
-        <p>To expand access to healthcare, financial literacy, and education, empowering underserved communities to thrive.</p>
-      </div>
-      <div class="card">
-        <h3>Vision</h3>
-        <p>To create a future where underserved youth thrive with health, knowledge, and opportunity.</p>
-      </div>
+  <div class="hero">
+    <div class="hero-content">
+      <h1>Empowering Lives Through Education & Care</h1>
+      <p>Healthcare. Education. Mentorship. We believe every student deserves a chance to succeed.</p>
     </div>
-  </section>
+  </div>
 
-  <section id="tutoring">
-    <h2>Tutoring Programs</h2>
-    <p style="text-align:center; max-width:800px; margin:auto;">We offer tutoring in all English courses, all sciences, all math up to Calculus, and ACT preparation. Our goal is to help students build confidence and succeed academically.</p>
-    <form action="https://formspree.io/f/myzngkve" method="POST" class="contact-form">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <input type="text" name="subject" placeholder="What subject do you need help with?" required>
-      <textarea name="message" rows="5" placeholder="Tell us about your tutoring needs" required></textarea>
-      <button type="submit">Sign Up for Tutoring</button>
-    </form>
-  </section>
+  <div class="wrap">
 
-  <section id="collab">
-    <h2>Collaborate With Us</h2>
-    <p style="text-align:center; max-width:800px; margin:auto;">We welcome partnerships with schools, organizations, and individuals who share our mission. Fill out the form below to collaborate with us!</p>
-    <form action="https://formspree.io/f/mzzjpdwr" method="POST" class="contact-form">
-      <input type="text" name="name" placeholder="Your Name or Organization" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <input type="text" name="subject" placeholder="Collaboration Idea" required>
-      <textarea name="message" rows="5" placeholder="Tell us how you’d like to collaborate" required></textarea>
-      <button type="submit">Submit Collaboration</button>
-    </form>
-  </section>
+    <section id="story">
+      <div class="section-title">Our Story</div>
+      <p>In our community, many youth lack access to basic resources, tutoring, and support. Inspired to uplift them, we founded Caring Hands of Tennessee. Our mission is to ensure access to healthcare, education, and financial literacy so every young person can thrive.</p>
+    </section>
 
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <form action="https://formspree.io/f/xdkwnajn" method="POST" class="contact-form">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <input type="text" name="subject" placeholder="Subject" required>
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
+    <section id="mission">
+      <div class="section-title">Mission & Vision</div>
+      <div class="cards">
+        <div class="card">
+          <h3>Mission</h3>
+          <p>To expand access to healthcare, financial literacy, and education, empowering underserved communities to thrive.</p>
+        </div>
+        <div class="card">
+          <h3>Vision</h3>
+          <p>To create a future where underserved youth thrive with health, knowledge, and opportunity.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="programs">
+      <div class="section-title">What We Do</div>
+      <div class="cards">
+        <div class="card">
+          <h3>Education Support</h3>
+          <p>Tutoring, mentoring, help with school resources, study tools, and more.</p>
+        </div>
+        <div class="card">
+          <h3>Healthcare Access</h3>
+          <p>Connecting youth and families with health resources, wellness checks, prevention programs, and support.</p>
+        </div>
+        <div class="card">
+          <h3>Financial Literacy</h3>
+          <p>Workshops and coaching for budgeting, saving, financial planning, and understanding money.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="tutoring">
+      <div class="section-title">Sign Up for Tutoring</div>
+      <form action="https://formspree.io/f/myzngkve" method="POST" class="form-group">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <input type="text" name="subjects" placeholder="Subjects Interested In (English, Sciences, Math to Calculus, ACT)" required>
+        <textarea name="notes" rows="4" placeholder="Tell us more about your needs"></textarea>
+        <button type="submit">Sign Up</button>
+      </form>
+    </section>
+
+    <section id="collab">
+      <div class="section-title">Collaborate With Us</div>
+      <form action="https://formspree.io/f/mzzjpdwr" method="POST" class="form-group">
+        <input type="text" name="name" placeholder="Name / Organization" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <input type="text" name="subject" placeholder="Collaboration Idea" required>
+        <textarea name="message" rows="4" placeholder="How we can work together"></textarea>
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+
+    <section id="contact">
+      <div class="section-title">Contact Us</div>
+      <form action="https://formspree.io/f/xdkwnajn" method="POST" class="form-group">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <input type="text" name="subject" placeholder="Subject" required>
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </section>
+
+  </div>
 
   <footer>
-    <p>© 2025 Caring Hands of Tennessee. All rights reserved.</p>
+    <p>&copy; Caring Hands of Tennessee</p>
   </footer>
+
 </body>
 </html>
